--- a/css/main.css
+++ b/css/main.css
@@ -95,12 +95,28 @@ footer {
   align-items: center;
   flex-flow: row wrap;
 }
+/* Set the top margin for all divs to 50 px since they all are the same in measurements*/
+.content-wrapper{
+  width: 90%;
+  margin: 50px 0;
+}
+
+.header-divider {
+  width:100%;
+  height: 1px;
+  margin: 10px 0 20px 0;
+}
+
+header {
+  padding:15px 0;
+}
 
 header .content-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  margin: 0;
 }
 
 header nav {
@@ -108,22 +124,13 @@ header nav {
   justify-content: space-around;
   align-items: center;
   flex-flow:row wrap;
+  width: 60%;
 }
+
 header nav ul {
   display: flex;
   justify-content: space-around;
-}
-
-footer .social-icons {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-footer .social-icons p {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 100%;
 }
 
 /***** Mobile Styles for Homepage *****/
@@ -151,11 +158,24 @@ aside {
   flex-flow: row wrap;
 }
 
+.features h2 {
+  margin: 20px 0 50px 0;
+}
+
 .features .features-items {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+}
+
+.features article {
+  width: 62% ;
+  margin: 30px 0;
+}
+
+.features p{
+  margin: 0;
 }
 
 /* Reviews */
@@ -165,7 +185,43 @@ aside {
   justify-content: center;
   flex-flow:row wrap;
 }
+.reviews h3 {
+  width:48%;
+}
 
+.reviews h2 {
+  margin: 0 0 40px;
+}
+
+/* Footer Styles */
+footer {
+  flex-direction: column;
+}
+
+footer .social-icons {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+footer .social-icons p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer .contact {
+  margin:0 0 45px ;
+}
+
+footer .content-wrapper {
+  width: 55%;
+  margin:50px 0;
+}
+
+footer .copyright {
+  margin: 40px 0;
+}
 
 /* About Page */
 
