--- a/css/main.css
+++ b/css/main.css
@@ -86,7 +86,6 @@ textarea {
 /* ==========================================================================
    /***** Author's custom styles *****/
 
-
 /***** BASE HEADER - FOOTER STYLES *****/
 header,
 footer {
@@ -96,19 +95,19 @@ footer {
   flex-flow: row wrap;
 }
 /* Set the top margin for all divs to 50 px since they all are the same in measurements*/
-.content-wrapper{
+.content-wrapper {
   width: 90%;
   margin: 50px 0;
 }
 
 .header-divider {
-  width:100%;
+  width: 100%;
   height: 1px;
   margin: 10px 0 20px 0;
 }
 
 header {
-  padding:15px 0;
+  padding: 15px 0;
 }
 
 header .content-wrapper {
@@ -123,7 +122,7 @@ header nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  flex-flow:row wrap;
+  flex-flow: row wrap;
   width: 60%;
 }
 
@@ -159,7 +158,7 @@ aside {
 }
 
 .features h2 {
-  margin: 20px 0 50px 0;
+margin-bottom: 60px;
 }
 
 .features .features-items {
@@ -170,11 +169,11 @@ aside {
 }
 
 .features article {
-  width: 62% ;
+  width: 62%;
   margin: 30px 0;
 }
 
-.features p{
+.features p {
   margin: 0;
 }
 
@@ -183,14 +182,15 @@ aside {
 .reviews {
   display: flex;
   justify-content: center;
-  flex-flow:row wrap;
+  flex-flow: row wrap;
 }
 .reviews h3 {
-  width:48%;
+  width: 48%;
+  margin: 20px 0;
 }
 
 .reviews h2 {
-  margin: 0 0 40px;
+  margin-bottom: 40px;
 }
 
 /* Footer Styles */
@@ -214,12 +214,12 @@ footer .social-icons p {
 }
 
 footer .contact {
-  margin-bottom: 45px ;
+  margin-bottom: 50px;
 }
 
 footer .content-wrapper {
   width: 55%;
-  margin:50px 0;
+  margin: 50px 0;
 }
 
 footer .copyright {
@@ -241,6 +241,9 @@ footer .copyright {
   align-items: center;
   flex-flow: row wrap;
 }
+.contact-content p {
+  margin: 0;
+}
 
 /* Faq Page */
 
@@ -251,20 +254,20 @@ footer .copyright {
   flex-flow: row wrap;
 }
 .faq .content-wrapper {
+  margin: 50px 0 0 0;
   display: flex;
   justify-content: center;
-  align-items:center;
-  flex-flow:row wrap;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
-.faq h2, .faq-content {
+.faq h2 {
   margin-bottom: 40px;
 }
 
-
-
-
-
+.faq-content {
+  margin-bottom: 50px;
+}
 
 /* ==========================================================================
    Helper classes
@@ -353,16 +356,138 @@ footer .copyright {
    These examples override the primary ('mobile first') styles.
    Modify as content requires.
    ========================================================================== */
+@media only screen and (min-width: 768px) {
+  /* Tablet styles here */
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+  .content-wrapper {
+    max-width: 640px;
+    margin: 100px 0;
+  }
+  /* Header area */
+  .header-divider {
+    display: none;
+  }
+
+  header {
+    justify-content: space-around;
+    padding: 33px 0;
+  }
+
+  header .content-wrapper {
+    width: 100%;
+    justify-content: space-between;
+  }
+
+  header nav {
+    width: 20%;
+  }
+
+  header nav ul {
+    justify-content: space-between;
+  }
+
+  /* Hero area */
+
+  /* Aside */
+  aside .content-wrapper {
+    margin: 50px 0;
+    display: flex;
+    justify-content: space-between;
+    flex-flow: row wrap;
+  }
+
+  aside .content-wrapper .form-description,
+  aside .content-wrapper .form {
+    width: 40%;
+    margin: 0;
+  }
+
+  /* Features Area */
+  .features article {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column wrap;
+    flex-basis: 50%;
+  }
+  .features .features-item-description {
+    width: 50%;
+  }
+
+  /* Reviews */
+
+  .reviews article {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .reviews article div {
+    width: 49%;
+  }
+
+  footer .content-wrapper {
+    width: 65%;
+    margin: 100px 0;
+  }
+
+  .footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .footer-contact {
+    margin-bottom: 0;
+  }
+
+  footer .copyright {
+    width: 100%;
+  }
+
+  /* ==========================================================================
+   About Page
+   ========================================================================== */
+
+  .mission-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 20px;
+  }
+
+  .mission-content p {
+    width: 45%;
+  }
+
+  .contact-section .content-wrapper h2 {
+    width: 80%;
+  }
+
+  .contact-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+
+
+  /* ==========================================================================
+     Faq Page
+    ========================================================================== */
+
+  .faq .content-wrapper {
+    justify-content: space-between;
+  }
+
+  .faq-content {
+    flex-basis: 45%;
+  }
+
+  .faq h2 {
+    width: 100%;
+  }
+
 }
-
-@media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
+@media only screen and (min-width: 1200px) {
+  /* Desktop styles here */
 }
 
 /* ==========================================================================
@@ -439,4 +564,3 @@ footer .copyright {
     page-break-after: avoid;
   }
 }
-
