--- a/css/main.css
+++ b/css/main.css
@@ -224,6 +224,9 @@ footer .content-wrapper {
 
 footer .copyright {
   margin: 20px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* About Page */
@@ -488,6 +491,62 @@ footer .copyright {
 }
 @media only screen and (min-width: 1200px) {
   /* Desktop styles here */
+
+  .content-wrapper {
+    max-width: 960px;
+  }
+ 
+  /* Hero Area */
+
+  .hero-area h1 {
+    width: 66%;
+  }
+
+  /* Aside Area */
+
+  aside .content-wrapper {
+
+      justify-content:space-around ;
+  }
+
+  aside .content-wrapper .form-description,
+  aside .content-wrapper .form {
+    width: 30%;
+  }
+
+  /* Features Area */
+
+  .features h2 {
+    width: 88%;
+  }
+
+  .features article {
+    flex-basis: 33%;
+  }
+
+  /* Review Area */
+  .reviews article div {
+      width: 46%;
+  }
+
+  /* ==========================================================================
+   About Page
+   ========================================================================== */
+
+   .misson h2,
+   .contact-section .content-wrapper h2 {
+     width: 96%;
+   }
+
+   /* ==========================================================================
+   Faq Page
+   ========================================================================== */
+
+   .faq h2 {
+     width: 100%;
+   }
+
+
 }
 
 /* ==========================================================================
