--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,72 @@ textarea {
 /* ==========================================================================
    /***** Author's custom styles *****/
 
+
+   /* General Styles */
+
+   html {
+     font-size: 16px;
+
+   }
+
+   body {
+     font-family: 'Open Sana', sans-serif;
+     font-size: 1em;
+
+   }
+
+   ul,
+   ol {
+     list-style-type: none;
+   }
+
+   a {
+     color: #e2e3ed;
+     text-decoration: none;
+
+   }
+
+   h2 {
+     font-family: 'Poppins', sans-serif;
+      font-size:  1.875em;
+
+   }
+
+   h3, h4 {
+       font-family: 'Poppins', sans-serif;
+       font-size: 1.125em;
+   }
+
+   p {
+     font-size: 0.875em;
+     line-height: 1.125em ;
+
+   }
+
+/*
+   img {
+     
+
+   }
+
+   figure {
+
+   }
+
+   */
+
+   address {
+     font-style: normal;
+
+   }
+
+   .content-wrapper {
+  width: 90%;
+  margin: 50px 0;
+}
+
+
+
 /***** BASE HEADER - FOOTER STYLES *****/
 header,
 footer {
@@ -93,11 +159,6 @@ footer {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-}
-/* Set the top margin for all divs to 50 px since they all are the same in measurements*/
-.content-wrapper {
-  width: 90%;
-  margin: 50px 0;
 }
 
 .header-divider {
