--- a/css/main.css
+++ b/css/main.css
@@ -128,6 +128,10 @@ p {
   line-height: 1.125em;
 }
 
+img {
+  width: 100%;
+}
+
 address {
   font-style: normal;
 }
@@ -144,7 +148,7 @@ footer {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-   background-color: #202322;
+  background-color: #202322;
 }
 
 .header-divider {
@@ -184,18 +188,19 @@ header nav ul {
 
 /*****  Base styles for all pages  *****/
 
-
-
-
 /* Hero Area */
 .hero-area {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  background-image: url(/img/jake-melara-30679-unsplash.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .hero-area h1 {
-  font-family: 'Poppins',  Helvetica, Arial, sans-serif;
+  font-family: "Poppins", Helvetica, Arial, sans-serif;
   font-size: 2.25em;
   font-weight: 500;
   line-height: 1.2;
@@ -211,13 +216,11 @@ aside {
   background-color: #527158;
 }
 
-
 aside.form {
   margin-top: 30px;
 }
 
-
-input[type=text] {
+input[type="text"] {
   box-sizing: border-box;
   width: 100%;
   color: #2a423a;
@@ -225,13 +228,12 @@ input[type=text] {
   padding: 1em;
 }
 
-
-input[type=button] {
+input[type="button"] {
   width: 100%;
   padding: 20px 0;
   margin-top: 20px;
   background-color: #2a423a;
-  font-family: 'Poppins' Arial, Helvetica, sans-serif;
+  font-family: "Poppins" Arial, Helvetica, sans-serif;
   font-weight: 500;
   font-size: 1.125em;
   color: #e2e3ed;
@@ -240,14 +242,12 @@ input[type=button] {
   text-transform: uppercase;
 }
 
-
 /* Features */
 
 .features {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
- 
 }
 
 .features h2 {
@@ -270,7 +270,6 @@ input[type=button] {
   text-align: center;
   margin: 0;
 }
-
 
 /* Reviews */
 
@@ -315,7 +314,6 @@ footer .social-icons p {
 
 footer .contact {
   margin-bottom: 50px;
- 
 }
 
 footer .content-wrapper {
@@ -367,10 +365,15 @@ footer .copyright {
 
 .faq h2 {
   margin-bottom: 40px;
+  line-height: 1;
 }
 
 .faq-content {
   margin-bottom: 50px;
+}
+
+.faq-content h4 {
+  line-height:1.333;
 }
 
 /* ==========================================================================
