--- a/css/main.css
+++ b/css/main.css
@@ -132,6 +132,10 @@ img {
   width: 100%;
 }
 
+figure {
+  margin: 0;
+}
+
 address {
   font-style: normal;
 }
@@ -160,6 +164,14 @@ footer {
 
 header {
   padding: 15px 0;
+}
+
+header figure {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
 header .content-wrapper {
@@ -197,6 +209,7 @@ header nav ul {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  min-height: 500px;
 }
 
 .hero-area h1 {
@@ -248,6 +261,10 @@ input[type="button"] {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  background-image: url(/img/rawpixel-800820-unsplash1.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .features h2 {
@@ -279,6 +296,14 @@ input[type="button"] {
   flex-flow: row wrap;
   background-color: #2a423a;
   color: #fff;
+}
+
+.reviews figure {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
 }
 .reviews h3 {
   width: 55%;
@@ -478,6 +503,14 @@ footer .copyright {
   header {
     justify-content: space-around;
     padding: 33px 0;
+  }
+
+  header figure {
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
   }
 
   header .content-wrapper {
