--- a/css/main.css
+++ b/css/main.css
@@ -182,6 +182,10 @@ header .content-wrapper {
   margin: 0;
 }
 
+header nav ul li {
+  font-size: 1.125em;
+}
+
 header nav {
   display: flex;
   justify-content: space-around;
@@ -190,6 +194,7 @@ header nav {
   width: 60%;
   font-weight: 700;
   font-size: 1.125em;
+  text-transform: uppercase;
 }
 
 header nav ul {
@@ -511,6 +516,16 @@ footer .copyright {
     max-width: 640px;
     margin: 100px 0;
   }
+
+  h2 {
+    font-size: 2.25em;
+    line-height: 1.333;
+  }
+
+  h3 {
+    font-size: 1.5em;
+    line-height: 1.25em;
+  }
   /* Header area */
   .header-divider {
     display: none;
@@ -522,20 +537,16 @@ footer .copyright {
   }
 
   header figure {
-    width: 60%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
+    width: 30%;
   }
 
   header .content-wrapper {
     width: 100%;
     justify-content: space-between;
   }
-
-  header nav {
-    width: 20%;
+  /* If your nav bar is still too close together come back to me */
+  header nav  {
+    width:30%;
   }
 
   header nav ul {
@@ -543,6 +554,15 @@ footer .copyright {
   }
 
   /* Hero area */
+  .hero-area {
+    min-height: 600px;
+  }
+
+  .hero-area h1 {
+    font-size: 3em;
+    line-height: 1;
+    margin: 0;
+  }
 
   /* Aside */
   aside .content-wrapper {
@@ -554,7 +574,7 @@ footer .copyright {
 
   aside .content-wrapper .form-description,
   aside .content-wrapper .form {
-    width: 40%;
+    width: 35%;
     margin: 0;
   }
 
@@ -567,7 +587,7 @@ footer .copyright {
     flex-basis: 50%;
   }
   .features .features-item-description {
-    width: 50%;
+    width:62%;
   }
 
   /* Reviews */
@@ -577,8 +597,18 @@ footer .copyright {
     justify-content: space-between;
   }
 
-  .reviews article div {
+  .reviews h2 {
+    width: 85%;
+  }
+
+  .reviews article div
+  .reviews article figure {
     width: 49%;
+  }
+
+  .reviews h3 {
+    width: 75%;
+    margin:0 ;
   }
 
   footer .content-wrapper {
@@ -586,13 +616,23 @@ footer .copyright {
     margin: 100px 0;
   }
 
-  .footer-content {
+   footer .footer-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-direction: row;
   }
-  .footer-contact {
+  footer .contact {
     margin-bottom: 0;
+  }
+
+  footer h4{
+    font-size: 1.5em;
+    margin-bottom: 40px;
+  }
+
+  footer p {
+    line-height: 1.285;
   }
 
   footer .copyright {
@@ -624,6 +664,15 @@ footer .copyright {
     align-items: flex-start;
   }
 
+  .contact-content h4 {
+    font-size: 1.5em;
+  }
+
+  .map figure {
+  padding-bottom: 45.5%;
+
+}
+
   /* ==========================================================================
      Faq Page
     ========================================================================== */
@@ -639,18 +688,43 @@ footer .copyright {
   .faq h2 {
     width: 100%;
   }
+
+  .faq h4,
+  .faq p {
+    font-size: .875em;
+    line-height: 1.125em;
+  }
 }
 @media only screen and (min-width: 1200px) {
   /* Desktop styles here */
+
+  header {
+    padding: 15px 0 ;
+  }
 
   .content-wrapper {
     max-width: 960px;
   }
 
+  h2 {
+    font-size: 2.25em;
+  }
+
+  h3,
+  h4 {
+    font-size: 1.875em;
+  }
+
+  p{
+    font-size: 1.125em;
+    line-height: 1.333;
+  }
+
   /* Hero Area */
 
   .hero-area h1 {
-    width: 66%;
+    font-size: 3.75em;
+    width: 80%;
   }
 
   /* Aside Area */
@@ -661,13 +735,17 @@ footer .copyright {
 
   aside .content-wrapper .form-description,
   aside .content-wrapper .form {
-    width: 30%;
+    width: 40%;
+  }
+
+  .form-description p {
+    font-size: 1.125em;
   }
 
   /* Features Area */
 
   .features h2 {
-    width: 88%;
+    width: 90%;
   }
 
   .features article {
@@ -679,14 +757,31 @@ footer .copyright {
     width: 46%;
   }
 
+  .reviews h2 {
+    padding-bottom: 50px;
+  }
+
+  footer h4 {
+    font-size: 1.875em;
+  }
+
   /* ==========================================================================
    About Page
    ========================================================================== */
 
   .misson h2,
   .contact-section .content-wrapper h2 {
-    width: 96%;
+    width: 95%;
+    font-size: 3em;
   }
+
+    .map figure {
+  padding-bottom: 37.5%;
+
+    } 
+    .contact-content h4 {
+    font-size: 1.875em;
+    }   
 
   /* ==========================================================================
    Faq Page
@@ -694,6 +789,13 @@ footer .copyright {
 
   .faq h2 {
     width: 100%;
+    font-size:3em ;
+  }
+
+  .faq h4,
+  .faq p {
+    font-size: 1.125em;
+    line-height: 1;
   }
 }
 
