--- a/css/main.css
+++ b/css/main.css
@@ -125,7 +125,7 @@ h4 {
 
 p {
   font-size: 0.875em;
-  line-height: 1.125em;
+  line-height: 1.185em;
 }
 
 img {
@@ -341,12 +341,6 @@ footer .social-icons {
   align-items: center;
 }
 
-footer .social-icons p {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 footer .contact {
   margin-bottom: 50px;
 }
@@ -358,6 +352,21 @@ footer .content-wrapper {
 
 footer .copyright {
   margin: 20px 0;
+}
+
+footer  .social-icons p i {
+ font-size: 1.3125em;
+
+}
+
+footer .social-icons p {
+  background-color: #527158;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* About Page */
@@ -595,6 +604,10 @@ footer .copyright {
     width:62%;
   }
 
+  .features i {
+    margin-bottom: 30px;
+  }
+
   /* Reviews */
 
   .reviews article {
@@ -642,6 +655,11 @@ footer .copyright {
 
   footer .copyright {
     width: 100%;
+  }
+
+  footer .social-icons {
+    width: 12.5em;
+    justify-content: space-between;
   }
 
   /* ==========================================================================
