--- a/css/main.css
+++ b/css/main.css
@@ -113,6 +113,7 @@ h2 {
   font-family: "Poppins", sans-serif;
   font-size: 1.875em;
   font-weight: 500;
+  margin: 0;
 }
 
 h3,
@@ -125,7 +126,7 @@ h4 {
 
 p {
   font-size: 0.875em;
-  line-height: 1.185em;
+  line-height: 1.285;
 }
 
 img {
@@ -284,7 +285,7 @@ input[type="button"] {
 }
 
 .features article {
-  width: 62%;
+  width: 63%;
   margin: 30px 0;
 }
 
@@ -305,7 +306,7 @@ input[type="button"] {
   justify-content: center;
   flex-flow: row wrap;
   background-color: #2a423a;
-  color: #fff;
+
 }
 
 .reviews figure {
@@ -322,7 +323,6 @@ input[type="button"] {
 
 .reviews h2 {
   margin-bottom: 40px;
-  font-weight: normal;
   line-height: 1;
 }
 
@@ -588,7 +588,7 @@ footer .social-icons p {
 
   aside .content-wrapper .form-description,
   aside .content-wrapper .form {
-    width: 35%;
+    width: 40%;
     margin: 0;
   }
 
@@ -619,8 +619,8 @@ footer .social-icons p {
     width: 85%;
   }
 
-  .reviews article div
-  .reviews article figure {
+  .reviews article figure, 
+  .reviews article div {
     width: 49%;
   }
 
